Feat: 외부 API 에러핸들링 추가 #16