@@ -2,26 +2,32 @@ package teamtridy.tridy.service;
 
 import java.net.URI;
 import java.net.URLEncoder;
-import java.time.LocalDate;
+import java.nio.charset.StandardCharsets;
+import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.client.RestTemplate;
+import teamtridy.tridy.domain.repository.PlaceRepository;
+import teamtridy.tridy.error.ExternalException;
 import teamtridy.tridy.service.dto.TourCongestionResponseDto;
+import teamtridy.tridy.service.dto.TourCongestionResponseDto.Items;
 
 @RequiredArgsConstructor
 @Service
 @Slf4j
 public class TourService {
+
+    private final PlaceRepository placeRepository;
 
     private final RestTemplate restTemplate;
     @Value("${tour.service_key}")
@@ -49,27 +55,38 @@ public class TourService {
                 .format(DateTimeFormatter.ofPattern("yyyyMMdd")); //2021-09-09 -> 20210909
 
         StringBuffer bufferedUri = new StringBuffer(
-                tourCongestionUrl).append("?" + URLEncoder.encode("ServiceKey", "UTF-8")
+                tourCongestionUrl).append("?" + URLEncoder.encode("ServiceKey",
+                StandardCharsets.UTF_8)
                 + "=" + tourServiceKey)
-                .append("&" + URLEncoder.encode("MobileOS", "UTF-8") + "=" + URLEncoder
-                        .encode(tourMobileOS, "UTF-8"))
-                .append("&" + URLEncoder.encode("MobileApp", "UTF-8") + "=" + URLEncoder
-                        .encode(tourMobileOS, "UTF-8"))
-                .append("&" + URLEncoder.encode("startYmd", "UTF-8") + "=" + URLEncoder
-                        .encode(strDate, "UTF-8"))
-                .append("&" + URLEncoder.encode("endYmd", "UTF-8") + "=" + URLEncoder
-                        .encode(strDate, "UTF-8"))
-                .append("&" + URLEncoder.encode("contentId", "UTF-8") + "=" + URLEncoder
-                        .encode(OriginContentId.toString(), "UTF-8"))
-                .append("&" + URLEncoder.encode("_type", "UTF-8") + "=" + URLEncoder
-                        .encode("json", "UTF-8"));
+                .append("&" + URLEncoder.encode("MobileOS", StandardCharsets.UTF_8) + "="
+                        + URLEncoder
+                        .encode(tourMobileOS, StandardCharsets.UTF_8))
+                .append("&" + URLEncoder.encode("MobileApp", StandardCharsets.UTF_8) + "="
+                        + URLEncoder
+                        .encode(tourMobileOS, StandardCharsets.UTF_8))
+                .append("&" + URLEncoder.encode("startYmd", StandardCharsets.UTF_8) + "="
+                        + URLEncoder
+                        .encode(strDate, StandardCharsets.UTF_8))
+                .append("&" + URLEncoder.encode("endYmd", StandardCharsets.UTF_8) + "=" + URLEncoder
+                        .encode(strDate, StandardCharsets.UTF_8))
+                .append("&" + URLEncoder.encode("contentId", StandardCharsets.UTF_8) + "="
+                        + URLEncoder
+                        .encode(originContentId.toString(), StandardCharsets.UTF_8))
+                .append("&" + URLEncoder.encode("_type", StandardCharsets.UTF_8) + "=" + URLEncoder
+                        .encode("json", StandardCharsets.UTF_8));
         URI uri = new URI(bufferedUri
                 .toString()); // RestTemplate에서 string url로 요청시한번 더 encoding 하는 문제점으로 인해 uri을 인수로 전달
 
-        // Request current weather
-        ResponseEntity<TourCongestionResponseDto> response = restTemplate
-                .exchange(uri, HttpMethod.GET, request,
-                        TourCongestionResponseDto.class);
+        ResponseEntity<TourCongestionResponseDto> response;
+
+        try {
+            // Request current weather
+            response = restTemplate
+                    .exchange(uri, HttpMethod.GET, request,
+                            TourCongestionResponseDto.class);
+        } catch (Exception e) {
+            throw new ExternalException(e);
+        }
 
         Items items = response
                 .getBody()
